# loopline-resolve-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  LoopLine-Resolve-AI-AI103-Capstone-Guide.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt  sample-data
.github/workflows/: ci.yml
LoopLine-Resolve-AI-Mock-Dataset/sample-data/: README.md
LoopLine-Resolve-AI-Mock-Dataset/scripts/: README.md  generate_mock_data.py
app/api/: main.py
app/core/: config.py  credentials.py
app/extraction/: confidence.py  normalizer.py  pipeline.py  video.py  vision.py
app/ingestion/: hashing.py  manifest.py  pipeline.py  validators.py
app/providers/: protocols.py
app/safety/: visual_policy.py
config/: access-profile.example.json  agent-policy.json  retrieval.json  safety-policy.json  visual-analysis.schema.json
docs/: architecture.md  cost-and-cleanup.md  demo-script.md  rbac-matrix.md  setup.md  threat-model.md  validation-report.md
docs/adr/: 001-provider-strategy.md  002-service-selection.md  003-authentication.md  004-ingestion-design.md  005-document-intelligence-vs-content-understanding.md  006-vision-model-behavior.md
infra/: README.md  main.bicep  parameters.dev.json
results/ingestion/: manifest.jsonl
scripts/: check_access.py  ingest.py  validate_sample_data.py
tests/contract/: test_extraction_contract.py
tests/evaluation/: test_vision_cases.py
tests/unit/: test_api_cases.py  test_health.py  test_ingestion.py
ui/: streamlit_app.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+72 files in other folders)
