[project]
name = "loopline-resolve-ai"
version = "0.1.0"
description = "LoopLine Resolve AI: a multimodal warranty-claims and repair copilot (AI-103 capstone)."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "python-multipart",
  "httpx",
  "tenacity",
  "structlog",
  "streamlit",
  "pypdf",
  "pillow",
  "azure-identity",
  "azure-ai-projects>=2",
  "openai",
  "azure-search-documents",
  "azure-ai-documentintelligence",
  "azure-ai-textanalytics",
  "azure-ai-contentsafety",
  "azure-cognitiveservices-speech",
  "azure-storage-blob",
  "azure-monitor-opentelemetry",
  "azure-ai-evaluation",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "coverage"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
